# one-proxy

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/api/: antigravity.rs  claude.rs  codex.rs  config.rs  gemini.rs  handlers.rs  kiro.rs  management.rs  mime_types.rs  mod.rs  model_router.rs  schema_cleaner.rs  signature_cache.rs  streaming.rs
src-tauri/src/api/common/: json_schema.rs  mod.rs
src-tauri/src/api/mappers/: mod.rs
src-tauri/src/api/mappers/gemini/: collector.rs  wrapper.rs
src-tauri/src/api/mappers/openai/: collector.rs  mod.rs  request.rs  streaming.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/auth/providers/: anthropic.rs  antigravity.rs  google.rs  iflow.rs  kiro.rs  mod.rs  openai.rs  qwen.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/proxy/: mod.rs  router.rs  translator.rs
src/components/: Header.tsx  Sidebar.tsx
src/pages/: Accounts.tsx  Dashboard.tsx  RequestLogs.tsx  Settings.tsx
