[package]
name = "tauri-cliproxy"
version = "0.1.0"
description = "CLI Proxy API Desktop App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_cliproxy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server (axum)
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# OAuth
oauth2 = "4"

# File watching
notify = "7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
once_cell = "1"
parking_lot = "0.12"
futures = "0.3"
async-stream = "0.3"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
urlencoding = "2"
open = "5"
tauri-plugin-dialog = "2.6.0"
flate2 = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
